<resources>
    <string name="promo">Promo</string>
    <string name="skip_favourite">Skip Favourite Places</string>
    <string name="skip_popular">Skip Popular</string>
    <string name="capacity">Capacity</string>
    <string name="droploc_c">Drop Location ?</string>
    <string name="tap_to_edit">Tap to edit your pickup or drop location</string>
    <string name="move_map_to">Move map to adjust pickup</string>
    <string name="confirm_pickup_to">Confirm your pickup at</string>
    <string name="confirm_pickup">Confirm Pickup</string>
    <string name="skip_fav">Skip Favourite Places</string>
    <string name="skip_drop_location">Skip Drop Location</string>
    <string name="date_change">Your phone date is inaccurate! Adjust your clock and try again.</string>
    <string name="waiting_fare">Waiting fare per hour</string>
    <string name="app_nametm">Cabi</string>
    <string name="your_card_expiry">Your card expired</string>
    <string name="approx_fare">Approximate Fare</string>
    <string name="enter_the_confirmation_phoneno">Please enter  valid mobile number</string>
    <string name="max_size">Maximum Size</string>
    <string name="track_now">Track Now</string>
    <string name="dist_fare">Distance Fare</string>
    <string name="fare2">123</string>
    <string name="enter_valid_comment">Enter valid comment</string>
    <string name="hour">Hour</string>
    <string name="promotion">Promotion</string>
    <string name="calldriver">Are you sure you want to call the driver?</string>
    <string name="min_trav">Minutes Travelled</string>
    <string name="excuse_me_brevity"> Sign up with the Referral/Promo code </string>
    <string name="and_earn"> and earn </string>
    <string name="download_from">Download the app from:</string>
    <string name="promo_code_empty"> You did\'t apply any promo code</string>
    <string name="location_disable">Location Services Disabled</string>
    <string name="enable">Enable</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="pressBack">Please click BACK again to exit</string>
    <string name="server_con_error" translatable="false">Please try again</string>
    <string name="mobileno">Mobile number</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="signin">Sign In</string>
    <string name="signins">Sign In</string>
    <string name="enter_the_mobile_number">Please enter your mobile number</string>
    <string name="enter_the_password">Please enter your password</string>
    <string name="password_min_character">Password should be minimum 6 characters</string>
    <string name="password_max_character">Password should be less than 32 characters</string>
    <string name="userphno">User Mobile Number</string>
    <string name="forgotpswd">Forgot Password?</string>
    <string name="confirmlogout">Are you sure you want to logout?</string>
    <string name="create_account">Create an Account</string>
    <string name="plzselect">Please select</string>
    <string name="profile_image">Profile Image</string>
    <string name="choose_an_image">Choose an Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="please_select_your_salutation">Please select your salutation</string>
    <string name="enter_the_first_name">Please enter your first name</string>
    <string name="enter_the_last_name">Please enter your last name</string>
    <string name="enter_the_card_number">Please enter your card number</string>
    <string name="enter_the_expiry_date">Please enter expiry date</string>
    <string name="enter_the_cvv">Please enter your CVV</string>
    <string name="enter_the_valid_CVV">Please enter valid CVV</string>
    <string name="enter_the_email">Please enter your email</string>
    <string name="enter_the_valid_email">Please enter valid email</string>
    <string name="enter_the_confirmation_password">Please enter confirm password</string>
    <string name="confirmation_password_mismatch_with_password">Password and Confirm password do not match</string>
    <string name="old_password_mismatch_with_password">Old password does not match</string>
    <string name="please_select_image_from_valid_path">Please select image from valid path(Gallery folder)</string>
    <string name="please_complete_registration">Yet to complete the registration process...</string>
    <string name="salutation">Salutation</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="email">Email</string>
    <string name="confimpswd">Confirm Password</string>
    <string name="acctxt">We only use your email and mobile number to send your ride notifications
        and receipts.
    </string>
    <string name="cardnumber">Card XXXX XXXX XXXX XXXX</string>
    <string name="expiry">Expiry MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="securecard">CARD INFO STORED SECURELY. IT WILL BE USED ONLY FOR PAYMENTS.
    </string>
    <string name="readterms">
        <u>I have read and understood the Terms and Conditions</u>
    </string>
    <string name="payby_cash">Pay By Cash?</string>
    <string name="skip">Skip for now</string>
    <string name="tax"> Tax( </string>
    <string name="tax_percent"> %) </string>
    <string name="please_check_internet">Please check your internet connection</string>
    <string name="app_name">Cabi </string>
    <string name="taxiname">Cabi</string>
    <string name="select_the_pickup_location">Please select the pick up location</string>
    <string name="select_the_drop_location">Please select the drop off location</string>
    <string name="book_taxi">Book Cabi</string>
    <string name="bookedtaxi">You have booked the Cabi.</string>
    <string name="avaiable_car">Cars Available</string>
    <string name="min">min</string>
    <string name="nodrivers">0 Cars Available</string>
    <string name="droplocnew">Drop off Location(Optional)</string>
    <string name="book_now">Book Now</string>
    <string name="confirm_booking">Confirm later booking?</string>
    <string name="fetching_address">Fetching address...</string>
    <string name="select_payment">Please select the payment type</string>
    <string name="location">Location</string>
    <string name="choose_place">Select type</string>
    <string name="delete_fdrivers">Do you want to delete the driver from Favourites?</string>
    <string name="back">Back</string>
    <string name="Trip_in_progress">Trip in Progress</string>
    <string name="intransit">Trip in Progress</string>
    <string name="Confirmation">Confirmation</string>
    <string name="estimated_arrival">Estimate Time of Arrival:</string>
    <string name="mins">Min(s)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No Thanks</string>
    <string name="driver_location">Driver Location</string>
    <string name="droplocation">Drop off Location(Optional)</string>
    <string name="picklocation">Pickup Location</string>
    <string name="call">Call</string>
    <string name="canceled_from">Debit from :</string>
    <string name="canceled_amount">Cancelled amount:</string>
    <string name="facebook_app_id">1659604664078736</string>
    <string name="googleID_api">AIzaSyD7zv0GV1pqixXaPGTaiys_GoGDKlitjuY</string>
    <string name="defaultcard1">Default Card</string>
    <string name="zerofee">PAY VIA CARD AT FREE OF COST</string>
    <string name="confirmdelete">Are you sure you want to delete card?</string>
    <string name="delete_card">Delete card</string>
    <string name="edit">Edit</string>
    <string name="select_card_type">Please select Card Type</string>
    <string name="enter_the_valid_card_number">Please enter valid card number</string>
    <string name="mobile">Mobile</string>
    <string name="enter_the_old_password">Please enter your old password</string>
    <string name="enter_the_new_password">Please enter your new password</string>
    <string name="no_changes">No changes made</string>
    <string name="sendmail">Send mail</string>
    <string name="there_is_no_email_client_installed">There is no email client installed</string>
    <string name="payment_complete">Trip Completed</string>
    <string name="thanksforflag">Thank you for using Cabi. Make your next trip even more
        enjoyable.
    </string>
    <string name="ratedriver">Rate Your Driver</string>
    <string name="shareride">Share it</string>
    <string name="edit_favourites">Edit Favourite</string>
    <string name="add_favourites">Add Favourite</string>
    <string name="register">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="agree_the_terms_and_condition">Please agree with the Terms and Condition</string>
    <string name="details">Fare Details</string>
    <string name="fare_txt">Fare</string>
    <string name="base_fare">Base Fare</string>
    <string name="min_fare">Minute Fare</string>
    <string name="below">Below</string>
    <string name="above">Above</string>
    <string name="nit_fare">Night Charges</string>
    <string name="nit_fare_to">to</string>
    <string name="menu">Menu</string>
    <string name="menu_gettaxi">Track my Cabi</string>
    <string name="menu_mybooking">My Bookings</string>
    <string name="menu_payment">Payment Options</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favourites">Favourite</string>
    <string name="menu_fare">Fare</string>
    <string name="menu_about">About</string>
    <string name="menu_about_us">About Us</string>
    <string name="book_a_taxi">Back To Home</string>
    <string name="pay_with_telr">Pay Now</string>
    <string name="menu_logout">Log Out</string>
    <string name="place">Place</string>
    <string name="amount">Amount</string>
    <string name="payment">Payment</string>
    <string name="jobref">Trip ID</string>
    <string name="t_passname">Driver name</string>
    <string name="t_pickloc">Pick up Location</string>
    <string name="t_book">Booking Time</string>
    <string name="t_picktime">Pick up Time</string>
    <string name="t_droploc">Drop off Location</string>
    <string name="t_droptime">Drop off Time</string>
    <string name="t_distance">Distance</string>
    <string name="t_tripduration">Trip Duration</string>
    <string name="rateapp">Rate us in Play Store</string>
    <string name="likefb">Like us on Facebook</string>
    <string name="followtw">Follow us on Twitter</string>
    <string name="legal">Legal</string>
    <string name="termcond">Terms &amp; Condition</string>
    <string name="policy">Privacy Policy</string>
    <string name="link">Links</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Customer Support</string>
    <string name="save">Save</string>
    <string name="requestingtaxi">Requesting Cabi</string>
    <string name="landmark">Landmark</string>
    <string name="chpwd">Change Password</string>
    <string name="conpwd">Confirm Password</string>
    <string name="oldpwd">Old Password</string>
    <string name="newpwd">New Password</string>
    <string name="addcard">Add New Card</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="airport">Airport</string>
    <string name="others">Others</string>
    <string name="about_sub_title">Ride from Anywhere \n Cabi</string>
    <string name="site_name">Cabi.com</string>
    <string name="headtitle_below">Lorem Ipsum is simply dummy text of the printing and typesetting
        industry
    </string>
    <string name="fblink">facebook.com/Cabi</string>
    <string name="twlink">twitter.com/Cabi</string>
    <string name="forgotpassw">Forgot Password?</string>
    <string name="version_up_later">Later</string>
</resources>