<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inner_content"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/reason_bg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/f_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/forgotpassw"
                android:textColor="@color/textviewcolor_dark"
                android:textSize="18sp" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/linebottom_light" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/ftmobilecodespn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2.5"
                    android:background="@android:color/transparent"
                    android:visibility="visible" />
                <TextView
                    android:id="@+id/ftspinner_value"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:visibility="gone"

                    />

                <EditText
                    android:id="@+id/forgotmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/enter_the_mobile_number"
                    android:maxLength="16"
                    android:padding="10dp"
                    android:textColor="@color/edittextcolor"
                    android:singleLine="true"
                    android:textColorHint="@color/hintcolor" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/linebottom_light" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingRight="05dp"
                android:paddingBottom="01dp"
                android:paddingLeft="05dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/cancelbtn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <View
                    android:id="@+id/for_sep"
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/linebottom_light" />

                <Button
                    android:id="@+id/okbtn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/submitbtntxtcolor" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>